--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	
 	
 	
-	<link rel="stylesheet" href="/assets/css/main.min.css">
+	<link rel="stylesheet" href="/bash-cli-beginners/assets/css/main.min.css">
 	
 	
 	
-	<noscript><link rel="stylesheet" href="/assets/css/noscript.min.css" /></noscript>
+	<noscript><link rel="stylesheet" href="/bash-cli-beginners/assets/css/noscript.min.css" /></noscript>
 	
 </head>
 
@@ -120,7 +120,7 @@
 
 
 
-<script src='/assets/js/bundle.min.js'></script>
+<script src='/bash-cli-beginners/assets/js/bundle.min.js'></script>
 
 
 	</body>
