--- a/things-to-remember/index.html
+++ b/things-to-remember/index.html
@@ -55,7 +55,7 @@ You cannot position your cursor on the command line terminal by moving your mous
 The left and right arrows can be used to move the cursor horizontally along a line of text, and the up and down arrows can be used to scroll through your command history.<br>
 <br />
 
-Tab completion is also a thing on the command line, so if you start to type a command (or the path to a folder, a file name, ...) and hit the tab key it will autocomplete (or list autocompletion options). Use of this feature will save time and typos, so get comfortable using it. <br>
+<b>Tab completion</b> is also a thing on the command line, so if you start to type a command (or the path to a folder, a file name, ...) and hit the tab key it will <b>autocomplete</b> (or list autocompletion options). Use of this feature will save time and typos, so get comfortable using it. <br>
 <br />
 
 Here are some handy navigation tricks to remember:
@@ -128,16 +128,25 @@ Another method is to <b>quote</b> the character. This means doing exactly as it 
 
 <br />
 
+<h2>Notes for Windows users</h2>
+
+Since this material focuses on a Unix-style shell, there are a couple of key <b>syntax-related points</b> that are useful to note at this stage:
+<br />
+<li>The Windows file system uses a <b>backslash</b> <code>\</code> as a directory separator, while Unix-based systems use a <b>forward slash</b> <code>/</code>.</li>
+<li>The Windows file system is <b>not case-sensitive</b>, while Unix-based systems <b>are case-sensitive</b>.</li>
+
+<br />
+
 <h2> Words of caution </h2>
 
 The command line represents a way for you to deliver commands to your operating system. This means that any operation that you perform using the command line is a <i>real operation</i>.
-That is, if you delete that folder using the command line, that is just the same as if you right-click in Windows Explorer and delete that folder,
-but there is <b>no recycle bin</b> and <b>no undo button</b>. So <b>take care with your commands</b>, make sure you understand what you are doing, as some can cause <b>permanent data loss</b>.
+That is, if you delete a folder using the command line, that is just the same as if you right-click in Windows Explorer and delete that folder,
+but there is <b>no recycle bin</b> and <b>no undo button</b>. So <b>take care</b> with your commands, make sure you <b>understand</b> what you are doing, as some can cause <b>permanent data loss</b>.
 </p>
     </section>
     <ul class="actions">
 	<li><a href="/bash-cli-beginners/#contents" class="button primary">Contents</a></li>
-        <li><a href="/bash-cli-beginners/" class="button">Next</a></li>
+        <li><a href="/bash-cli-beginners/command-prompt-and-commands" class="button">Next</a></li>
       </ul>
 
   </div>
@@ -153,11 +162,11 @@ but there is <b>no recycle bin</b> and <b>no undo button</b>. So <b>take care wi
             <li><a target="_blank" href="https://www.linkedin.com/in/emma-kuwertz-52295880/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
             
         </ul>
-        <p>Hugo Story &copy; 2020 <a target="_blank" href="https://github.com/caressofsteel/">CaressOfSteel</a><span class="footerspacer icon fad fa-diamond"></span>
-            Ported from <a target="_blank" href="https://html5up.net/uploads/demos/story/">Story</a> by HTML5UP<span class="footerspacer icon fad fa-diamond"></span>
-            Images courtesy of <a target="_blank" href="https://unsplash.com">Unsplash</a></p>
+        <p>Hugo Story &copy; 2020 <a target="_blank" href="https://github.com/caressofsteel/">CaressOfSteel</a></span></p>
+
 </div>
 </footer>
+
 
 		
 		</div>
