--- a/why-use-the-command-line/index.html
+++ b/why-use-the-command-line/index.html
@@ -48,15 +48,16 @@
       <h2>Why use the command line?</h2>
       <p>Using the command line interface gives users the ability to deliver <b>text-based commands</b> to an operating system.
 Because these commands are spelled out explicitly, they are <b>clear</b> and <b>unambiguous</b>. 
-This means that tasks can be well defined, and subsequently <b>reproduced consistently</b>. <b>Repeatedly</b>.
+This means that tasks can be well defined, and subsequently <b>reproduced consistently</b>. <b>Repeatedly</b>.<br>
+<br />
 Users therefore have <b>greater control</b>, and can:
 <li>Give <b>clear</b> and <b>precise</b> instructions to operating systems.</li>
 <li>Repeat tasks and <b>reproduce the result exactly</b> by issuing the same command that was used to perform the original task.</li>
 <li>Clearly <b>document</b> task methodologies by recording the necessary commands, and possibly integrating them into a bash script.</li>
 <li><b>Automate</b> tasks and operations. The same command(s) can be issued to multiple files, multiple times.</li>
 <br />
-Beyond the benefits listed above, learning how to interact with computers via the command line introduces users to the logic and language of computer programming. This is hugely important for not only developers, but also anyone who does any kind of analytical work using code. A basic understanding will help uncover the true power available from your computer system, and will be vital to efficiently debug issues that come up when performing analytical tasks. The command line makes data science reproducible and scalable, and ultimately makes the user <b>more efficient</b>.<br>
-
+Beyond the benefits listed above, learning how to interact with computers via the command line <b>introduces users to the logic and language of computer programming</b>. This is hugely important for not only developers, but also anyone who does any kind of analytical work using code. A basic understanding will help uncover the true power available from your computer system, and will be vital to <b>efficiently debug</b> issues that come up when performing analytical tasks. The command line <b>makes data science reproducible and scalable</b>, and ultimately makes the user <b>more efficient</b>.<br>
+<br />
 
 <h2>Use of software packages</h2>
 
@@ -70,21 +71,25 @@ Beyond the benefits listed above, learning how to interact with computers via th
 Whether you're a developer, data scientist or analyst, you're likely to make use of mainstream software packages and tools in the course of your daily work.<br>
 <br />
 
-
-
-
-<a href="https://www.atlassian.com/git/tutorials/what-is-git">Git</a>, for example, is a modern version control system that has been broadly adopted as the go-to for version control. Though GUIs for Git do exist, Git was originally designed for command line use, and the full functionality of Git can be only be exploited via the command line. Generally only partial functionality can be offered through GUIs. To understand Git properly, having a basic working knowledge of the command line will be extremely helpful. <br>
-
-
-
+<a href="https://www.atlassian.com/git/tutorials/what-is-git">Git</a>, for example, is a modern version control system that has been broadly adopted as the go-to for version control. Though GUIs for Git do exist, Git was originally designed for command line use, and <b>the full functionality of Git can be only be exploited via the command line</b>. Generally only partial functionality can be offered through GUIs. To understand Git properly, having a basic working knowledge of the command line will be extremely helpful. <br>
+<br />
+Git is not covered in this material, but there are a lot resources online to help demystify Git, see e.g. this <a href="https://missing.csail.mit.edu/2020/version-control/">lecture</a> and this <a href="https://chryswoods.com/beginning_git/README.html">tutorial</a>.<br>
 
   <br />
-When writing a computer program, or analysis script, <a href="https://www.codecademy.com/articles/what-is-an-ide"><b>I</b>ntegrated <b>D</b>evelopment <b>E</b>nviroments (IDEs)</a> enable programmers to write code with the aid of syntax highlighting and autocomplete, while providing (at a minimum) build and debugging tools in the same application. This boosts programming efficiency when developing and editing code. An example below shows the RStudio IDE. 
+Scripts written in various programming languages are commonly executed from the command line to minimise the manual steps necessary for execution and to facilitate automation. 
+<pre><code>$> python hello_world.py
+hello world - from python!
+
+$> Rscript hello_world.R
+hello world, from R!
+</code></pre>
+
+The above code calls the python executable on <code>hello_world.py</code> and the Rscript executable on <code>hello_world.R</code>. When writing a computer program, or analysis script, <a href="https://www.codecademy.com/articles/what-is-an-ide"><b>I</b>ntegrated <b>D</b>evelopment <b>E</b>nviroments (IDEs)</a> enable programmers to write code with the aid of syntax highlighting and autocomplete, while providing (at a minimum) build and debugging tools in the same application. This boosts programming efficiency when developing and	editing code. For executing code, calling scripts via the integrated consoles or terminals or the command line interface is more faster and safer. 
 </p>
     </section>
     <ul class="actions">
 	<li><a href="/bash-cli-beginners/#contents" class="button primary">Contents</a></li>
-        <li><a href="/bash-cli-beginners/" class="button">Back to Home</a></li>
+        <li><a href="/bash-cli-beginners/introducing-the-shell" class="button">Next</a></li>
       </ul>
 
   </div>
@@ -100,11 +105,11 @@ When writing a computer program, or analysis script, <a href="https://www.codeca
             <li><a target="_blank" href="https://www.linkedin.com/in/emma-kuwertz-52295880/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
             
         </ul>
-        <p>Hugo Story &copy; 2020 <a target="_blank" href="https://github.com/caressofsteel/">CaressOfSteel</a><span class="footerspacer icon fad fa-diamond"></span>
-            Ported from <a target="_blank" href="https://html5up.net/uploads/demos/story/">Story</a> by HTML5UP<span class="footerspacer icon fad fa-diamond"></span>
-            Images courtesy of <a target="_blank" href="https://unsplash.com">Unsplash</a></p>
+        <p>Hugo Story &copy; 2020 <a target="_blank" href="https://github.com/caressofsteel/">CaressOfSteel</a></span></p>
+
 </div>
 </footer>
+
 
 		
 		</div>
