add windows/unix line endings discussion

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <li><a target="_blank" href="https://www.linkedin.com/in/emma-kuwertz-52295880/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
             
         </ul>
-        <p>Hugo Story &copy; 2020 <a target="_blank" href="https://github.com/caressofsteel/">CaressOfSteel</a></span></p>
-
+	<p>Hugo Story &copy; 2020 <a target="_blank" href="https://github.com/caressofsteel/">CaressOfSteel</a><span class="footerspacer icon fad fa-diamond"></span>
+          Ported from <a target="_blank" href="https://html5up.net/uploads/demos/story/">Story</a> by HTML5UP</p>
 </div>
 </footer>
 
